[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cloudflare-dns"
version = "0.1.1"
description = "Cloudflare DNS MCP server — manage zones, records, cache, and page rules from any MCP-compatible AI assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "cloudflare", "dns", "devops", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastmcp>=2.0.0",
    "cloudflare>=4.0.0",
]

[project.scripts]
mcp-cloudflare-dns = "cf.server:main"

[tool.hatch.build.targets.wheel]
packages = ["cf"]

[tool.ruff]
line-length = 100
target-version = "py311"
